# openemr

agentforge/: .env.example  .gitignore  AI_COST_ANALYSIS.md  AI_DEVELOPMENT_PROCESS.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  WEEKLY_DEVELOPMENT_LOG.md  pyproject.toml  start.sh
agentforge/app/: config.py  main.py  observability.py
agentforge/app/agent/: healthcare_agent.py  memory.py  prompts.py
agentforge/app/api/: routes.py
agentforge/app/openemr/: client.py
agentforge/app/tools/: appointment_availability.py  drug_interaction.py  insurance_coverage.py  medication_lookup.py  provider_search.py  symptom_lookup.py
agentforge/app/verification/: verifier.py
agentforge/evals/: healthcare_eval_dataset.json  runner.py  test_cases.py
agentforge/tests/: test_observability.py  test_tools.py  test_verifier.py
agentforge/ui/: streamlit_app.py
docker/development-easy/: docker-compose.yml
interface/main/: ai_assistant.php
interface/main/tabs/menu/menus/: standard.json
